--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/joy": "^5.0.0-beta.20",
+        "@nextui-org/react": "^2.2.9",
+        "framer-motion": "^10.16.16"
     }
 }
