--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/joy": "^5.0.0-beta.20",
         "@nextui-org/react": "^2.2.9",
-        "framer-motion": "^10.16.16"
+        "framer-motion": "^10.16.16",
+        "react-icons": "^4.12.0"
     }
 }
