--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
         "@emotion/styled": "^11.11.0",
         "@mui/joy": "^5.0.0-beta.20",
         "@nextui-org/react": "^2.2.9",
-        "framer-motion": "^10.16.16"
+        "@radix-ui/react-slot": "^1.0.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "date-fns": "^3.0.6",
+        "framer-motion": "^10.16.16",
+        "lucide-react": "^0.303.0",
+        "react-day-picker": "^8.10.0",
+        "tailwind-merge": "^2.2.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
