--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/joy": "^5.0.0-beta.20",
         "@nextui-org/react": "^2.2.9",
-<<<<<<< HEAD
+        "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
@@ -32,11 +32,8 @@
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.303.0",
         "react-day-picker": "^8.10.0",
+        "react-icons": "^4.12.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7"
-=======
-        "framer-motion": "^10.16.16",
-        "react-icons": "^4.12.0"
->>>>>>> 675c5acf5f40c923359891de2bc9e063fbec38a9
     }
 }
