--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
@@ -22,17 +21,21 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@headlessui/react": "^1.7.17",
+        "@heroicons/react": "^2.1.1",
         "@mui/joy": "^5.0.0-beta.20",
+        "@mui/x-charts": "^6.18.4",
         "@nextui-org/react": "^2.2.9",
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
-        "clsx": "^2.0.0",
+        "clsx": "^2.1.0",
         "date-fns": "^3.0.6",
         "framer-motion": "^10.16.16",
         "icons": "^1.0.0",
         "lucide-react": "^0.303.0",
         "react-day-picker": "^8.10.0",
         "react-icons": "^4.12.0",
+        "react-to-print": "^2.14.15",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7"
     }
